# hybrid-search-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  HANDOFF.md  LICENSE  PLAN_q1_routing_hook.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: tests.yml
.hybrid-search/: coverage.json  wiki-gaps.txt
.hybrid-search/wiki/: architecture.md  ast-chunker.md  benchmarks-(isolated).md  benchmarks-isolated.md  benchmarks.md  bm25.md  call-graph-&-module-tree.md  call-graph.md  claude-isolated.md  config-project.md  configuration-&-project-management.md  design-(isolated).md  design-isolated.md  embedder----openai-api-backend.md  graph-report-(isolated).md  graph_report-isolated.md  handoff-(isolated).md  handoff-isolated.md  hybrid-search.md  hybrid_search-isolated.md  hybrid_search.md  index-(isolated).md  index-isolated.md  index.md  mcp-server-&-cli.md  mcp-server.md  readme-isolated.md  run-benchmark-micro.md  run_benchmark_micro.md  search-(isolated).md  search-engine.md  search-isolated.md  search.md  stale-wiki-pages.md  storage-(isolated).md  storage-isolated.md  storage-layer.md  storage.md  symbols.md  test_config.md  (+24 more)
.hybrid-search/wiki/_raw/: architecture.raw.md  design-(isolated).raw.md  hybrid-search-(isolated).raw.md  (+9 more)
benchmarks/: agent_loop_loose.json  agent_loop_sim.py  agent_loop_strict.json  benchmark_micro_results.json  calibration_report.py  compounding_base_clean_2026-07-14.json  compounding_head_5332b6e_2026-07-16.json  compounding_head_clean_2026-07-14.json  compounding_pairs.json  compounding_report_2026-04-22.md  compounding_report_2026-04-23.md  compounding_report_2026-07-11.md  compounding_report_2026-07-12.md  compounding_report_2026-07-13.md  compounding_report_2026-07-14.md  compounding_report_2026-07-16.md  compounding_results.json  confidence_eval.py  memory_bench_v2_2026-07-11.json  memory_bench_v2_2026-07-11.md  memory_bench_v2_2026-07-12.json  memory_bench_v2_2026-07-12.md  memory_bench_v2_cases.json  memory_bench_v2_cases_httpx.json  memory_bench_v2_cases_ripgrep.json  memory_bench_v2_httpx_2026-07-13.json  memory_bench_v2_httpx_2026-07-13.md  memory_bench_v2_httpx_after_2026-07-13.json  memory_bench_v2_httpx_after_2026-07-13.md  memory_bench_v2_httpx_base_clean_2026-07-14.json  memory_bench_v2_httpx_head_clean_2026-07-14.json  memory_bench_v2_ripgrep_cleanrepro_2026-07-14.json  memory_bench_v2_ripgrep_cleanrepro_2026-07-14.md  memory_bench_v2_ripgrep_holdout_2026-07-13.json  memory_bench_v2_ripgrep_holdout_2026-07-13.md  memory_bench_v2_valuein_after_2026-07-13.json  memory_bench_v2_valuein_after_2026-07-13.md  memory_gold.json  memory_layer_v2_2026-04-28.json  memory_layer_v2_2026-04-28.md  (+36 more)
benchmarks/authority_poc/: apply_labels.py  external_queries.json  gold_queries.json  gold_queries_v2.json  label_me.tsv  results.json  results_v2.json  run.py  run_v2.py  score.py  score_v2.py
benchmarks/router_calibration/: valuein_gold.json
commands/: teardown.md
docs/: design.md  why.ko.md  why.md
docs/case-studies/: 2026-05-20-payssam-v2-migration.md
docs/plan/: 2026-04-14-design.md  2026-04-16-conversation-indexing.md  2026-04-21-memory-layer-10x.md
docs/plans/: 2026-04-23-v0.4.0-memory-integrity.md  2026-04-26-codex-memory-hooks.md  2026-04-26-memory-layer-10x-context-engineering.md  2026-05-12-phase4-codex-handoff.md  2026-05-20-distribution-artifacts.md  2026-05-20-phase5-in-flight-visibility.md  2026-07-15-agent-handoff-trust-bench.md  2026-07-15-p0-p1-trust-layer-spec.md  2026-07-15-readme-repositioning.md  2026-07-15-verified-handoff-packet.md  v0.3.0-deterministic-memory.md
docs/sns/: 2026-04-14-linkedin-hybrid-search-story.md  2026-05-XX-okky-velog.md  2026-05-XX-reddit-r-claudeai.md  2026-05-XX-reddit-r-localllama.md  2026-05-XX-show-hn.md  2026-07-10-linkedin-memory-layer-launch.md
hooks/: hooks.json
scripts/: plugin-bootstrap.sh  poc_conv_retrieval_eval.py  poc_transcript_chunks.py  post-checkout-hook.sh  post-commit-hook.sh  wiki_bloat_audit.py
skills/: bootstrap-wiki.md  maintain.md  rebuild-index.md  save-wiki.md  search.md  setup-hybrid-search.md
src/hybrid_search/: __init__.py  cli.py  codex_hooks.py  codex_plugin.py  config.py  hooks.py  project.py  security.py  server.py  viewer.py  wiki_cleanup.py
templates/: CLAUDE_md_search_section.md
tests/: conftest.py  test_ast_chunker.py  test_calibration.py  test_callgraph.py  test_cli_hook_install.py  test_code_lane_guard.py  test_codex_hooks.py  test_codex_plugin.py  test_commit_indexer.py  test_config.py  test_conv_in_flight.py  test_conversation_hook_spawn.py  test_conversation_indexer.py  test_conversation_lane.py  test_conversation_store.py  test_corpus_absent.py  test_cross_language_lane.py  test_cwd_boost.py  test_dag.py  test_doc_chunker.py  test_drift.py  test_embedder.py  test_fusion.py  test_graph_card.py  test_graph_cli.py  test_in_flight_overlay.py  test_memory_boost.py  test_memory_cards.py  test_memory_hook.py  test_memory_integrity.py  test_memory_layer_e2e.py  test_memory_quality.py  test_memory_types.py  test_module_injection.py  test_module_synth.py  test_modules.py  test_modules_search.py  test_orchestrator.py  test_pipeline.py  test_plugin_packaging.py  (+23 more)
(+50 files in other folders)
