[project]
name = "hybrid-search-mcp"
version = "0.1.0"
description = "Hybrid BM25 + Vector search MCP server with cross-language support (Korean ↔ English)"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "tantivy>=0.22",
    "usearch>=2.0",
    "onnxruntime>=1.17",
    "transformers>=4.40",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    # Phase 3b languages
    "tree-sitter-rust>=0.24",
    "tree-sitter-go>=0.25",
    "tree-sitter-ruby>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-c>=0.24",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-swift>=0.0.1",
    "tree-sitter-kotlin>=1.0",
    "tree-sitter-css>=0.25",
    "tree-sitter-html>=0.23",
    "tree-sitter-sql>=0.3",
    "tiktoken>=0.7",
    "pathspec>=0.12",
]

[project.optional-dependencies]
gpu = ["onnxruntime-silicon>=1.17"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
hybrid-search-mcp = "hybrid_search.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hybrid_search"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
