[project]
# PyPI distribution name. "hybrid-search-mcp" is taken by an unrelated
# project (krishna1306/mcp-server-hybrid-search) — the repo, CLI command,
# and import package keep the hybrid-search name.
name = "memory-layer-mcp"
version = "0.7.1"
description = "Memory Layer MCP for Claude Code — hybrid BM25 + vector search that compounds with usage (Korean ↔ English)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "curiohunter" }]
keywords = ["mcp", "claude-code", "memory", "hybrid-search", "bm25", "vector-search", "codex"]
dependencies = [
    "mcp[cli]>=1.0",
    "tantivy>=0.22",
    "usearch>=2.0",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    # Phase 3b languages
    "tree-sitter-rust>=0.24",
    "tree-sitter-go>=0.25",
    "tree-sitter-ruby>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-c>=0.24",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-swift>=0.0.1",
    "tree-sitter-kotlin>=1.0",
    "tree-sitter-css>=0.25",
    "tree-sitter-html>=0.23",
    "tree-sitter-sql>=0.3",
    "tiktoken>=0.7",
    "pathspec>=0.12",
    # Verified English stemmer for language-general qa topic matching
    # (pure Python, no transitive deps). Korean keeps its prefix rules.
    "snowballstemmer>=2.2",
]

[project.urls]
Homepage = "https://github.com/curiohunter/hybrid-search-mcp"
Repository = "https://github.com/curiohunter/hybrid-search-mcp"

[project.optional-dependencies]
gpu = []
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
hybrid-search-mcp = "hybrid_search.cli:main"
memory-layer-mcp = "hybrid_search.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hybrid_search"]

# Ship the Claude Code skills inside the wheel so a plain `pip install`
# gives the full experience — `setup` falls back to this packaged copy
# when the user didn't clone the repo.
[tool.hatch.build.targets.wheel.force-include]
"skills" = "hybrid_search/_skills"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
